--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
+  },"scripts": {
+    "start": "node index.js",
+    "dev": "DEBUG=students-api:* nodemon index.js"
   }
 }
